styles/main.css
* {
    font-family: arvo, verdana, Arial, Helvetica, 'Times New Roman';
    margin: 0;
    padding: 0;
}

body {
    background-color: rgb(238, 238, 238);
}

.main-content-title {
    margin-top: 150px;
    margin-left: 40px;
    font-size: 28px;
    font-weight: 200;
    text-decoration: underline;
    cursor: default;
}

.simulation-container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-top: 30px;
    margin-bottom: 130px;
}

.simulation-title {
    font-weight: 500;
    font-size: 18px;
    margin-bottom: 30px;
    font-style: italic;
}

.simulation-canvas {
    background-color: black;
    border-radius: 5px;
}

